== Released [attachment:wiki:SoftwareReleases:eLife-1.6b27.zip V1.6b27]   ==

''' HAL '''

Fixed null pointer in HAL

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b26.zip V1.6b26]   ==

''' HAL '''

Fixed null pointer if poll occurs before scan is complete from HAL. Resolves [ticket:587]

''' Security '''

Changed too many clients message to indicate contacting the integrator if the problem persists. Resolves [ticket:586]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b25.zip V1.6b25]   ==

''' Comms '''

Removed synchronization which may have been hanging startup. Thread not owner exception may return as a result.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b24.zip V1.6b24]   ==

''' Cbus '''

Added further label debug statements.

''' M1 '''

Incorporated changes

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b23.zip V1.6b23]   ==

''' Cbus '''

Changed default label key selector tag for DLT from DEFAULT to DEFAULT_LABEL_KEY

''' Cache '''
 
Ensure commands sent to the cache with a null display name do not cause a null pointer exception.

''' Comms '''

Changed thread locking method for comms send. Should resolve thread not owner issue

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b22.zip V1.6b22]   ==

''' Security '''

Added number of clients to startup messages

''' Cache '''

Ensure cache is properly set up, even if the device model does not correctly set the display name for the flash command. Resolves [ticket:584]

''' HAL '''

Simplified HAL model

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b21.zip V1.6b21]   ==

''' HAL '''

Simplified HAL model

IAdded debugging statements.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b20.zip V1.6b20]   ==

''' M1 '''

Incorporated fixes.

''' Web '''

Ensure all XML packets to be sent to the web browser have a correct target display name. Resolves [ticket:580]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b19.zip V1.6b19]   ==
