@@ -1,0 +1,195 @@
+<CONFIG lastUpdated="2004-03-18" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="eLife_Config_Schema.xsd">
+        <DESC>The BI demonstration CBUS system</DESC>
+ 
+        !-- ______________________________________  CBUS DEFS  ____________________  -->
+        <DEVICE ACTIVE="N" NAME="HAL" DISPLAY_NAME="HAL Audio">
+		<CONNECTION>
+			<IP ACTIVE="N" IP_ADDRESS="192.168.0.201" PORT="4999"/>
+			<SERIAL ACTIVE="Y" PORT="COM3" BAUD="4800" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE" SUPPORTS_CD="N" />
+		</CONNECTION>
+		<CATALOGUE NAME="HAL Inputs">
+			<ITEM CODE="cd1" VALUE="1" />
+			<ITEM CODE="radio" VALUE="2" />
+			<ITEM CODE="atom" VALUE="3" />
+			<ITEM CODE="tv" VALUE="4" />
+			<ITEM CODE="cd2" VALUE="5" />
+			<ITEM CODE="pc" VALUE="6" />
+		</CATALOGUE>
+
+		<CATALOGUE NAME="HAL Functions">
+			<ITEM CODE="cd-rw" VALUE="1" />
+			<ITEM CODE="cd-play" VALUE="4" />
+			<ITEM CODE="cd-ff" VALUE="5" />
+			<ITEM CODE="cd-stop" VALUE="3" />
+			<ITEM CODE="cd-pause" VALUE="9" />
+		</CATALOGUE>
+		<PARAMETERS>
+			<ITEM NAME="INPUTS" VALUE="HAL Inputs" />
+			<ITEM NAME="FUNCTIONS" VALUE="HAL Functions" />
+			<ITEM NAME="POLL_INTERVAL" VALUE="10" />
+		</PARAMETERS>
+		<HAL>
+			<AUDIO KEY="00" DISPLAY_NAME="FAMILY_AUDIO" />
+			<AUDIO KEY="01" DISPLAY_NAME="MASTERBED_AUDIO" />
+			<AUDIO KEY="02" DISPLAY_NAME="BED3_AUDIO" />
+			<AUDIO KEY="03" DISPLAY_NAME="STUDY_AUDIO" />
+			<AUDIO KEY="04" DISPLAY_NAME="BBQ_AUDIO" />
+			<AUDIO KEY="05" DISPLAY_NAME="BED4_AUDIO" />
+		</HAL>	
+	</DEVICE>
+	<DEVICE ACTIVE="Y" NAME="GC100" DISPLAY_NAME="GC100">
+                <CONNECTION>
+                        <IP ACTIVE="Y" IP_ADDRESS="192.168.0.201" PORT="4998"/>
+                </CONNECTION>
+                <PARAMETERS>                
+                </PARAMETERS>
+                <GC100_IR NAME="IR1">
+                        <PARAMETERS>
+                                <ITEM NAME="MODULE" VALUE="4"/>
+                                <ITEM NAME="MODULE_TYPE" VALUE="IR"/>
+                                <!-- Valid types are serial, IR or relay -->
+                        </PARAMETERS>
+                        <IR KEY="01" NAME="Downstairs" AV_NAME="TUNER"/>
+			<IR KEY="02" NAME="Upstairs" AV_NAME="AVCLOSET1"/>
+                        <IR KEY="03" NAME="Upstairs" AV_NAME="AVCLOSET2"/>
+                </GC100_IR>
+	</DEVICE>
+	<DEVICE ACTIVE="Y" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
+                <CONNECTION>
+                        <IP ACTIVE="Y" IP_ADDRESS="192.168.1.6" PORT="10001"/>
+                </CONNECTION>
+                
+                <PARAMETERS>
+                	<!-- ITEM NAME="POLL_TEMP_INTERVAL" VALUE="5" / -->
+                </PARAMETERS>
+                
+                <CBUS>
+			<!-- Temperature Sensors -->
+			<TEMPERATURE ACTIVE="N" KEY="68" NAME="Upstairs Temp" DISPLAY_NAME="UPSTAIRS_TEMP" />
+			<!-- Outside -->
+			<LIGHT_CBUS KEY="44" ACTIVE="Y" NAME="Back BBQ Floods" DISPLAY_NAME="BACK_BBQ_FLOODS" />
+			<LIGHT_CBUS KEY="18" ACTIVE="Y" NAME="Back Door Light" DISPLAY_NAME="BACK_DOOR_LIGHT" />
+			<LIGHT_CBUS KEY="1A" ACTIVE="Y" NAME="East Eave Light" DISPLAY_NAME="EAST_EAVE_LIGHT" />
+			<LIGHT_CBUS KEY="46" ACTIVE="Y" NAME="East Wall Light" DISPLAY_NAME="EAST_WALL_LIGHT" />
+			<LIGHT_CBUS KEY="13" ACTIVE="Y" NAME="Front Garden Light" DISPLAY_NAME="FRONT_GARDEN_LIGHT" />
+			<LIGHT_CBUS KEY="45" ACTIVE="Y" NAME="Laundry Garden Light" DISPLAY_NAME="LAUNDRY_GARDEN_LIGHT" />
+			<LIGHT_CBUS KEY="10" ACTIVE="Y" NAME="North External Wall Light" DISPLAY_NAME="NORTH_EXTERNAL_WALL_LIGHT" />
+			<LIGHT_CBUS KEY="05" ACTIVE="Y" NAME="Rear Garden Light" DISPLAY_NAME="REAR_GARDEN_LIGHT" />
+			<LIGHT_CBUS KEY="19" ACTIVE="Y" NAME="South Wall Light" DISPLAY_NAME="SOUTH_WALL_LIGHT" />
+			<LIGHT_CBUS KEY="16" ACTIVE="Y" NAME="West External Wall Light" DISPLAY_NAME="WEST_EXTERNAL_WALL_LIGHT" />
+			<LIGHT_CBUS KEY="12" ACTIVE="Y" NAME="West Wall Light" DISPLAY_NAME="WEST_WALL_LIGHT" />
+			<!-- Pool and Spa -->
+			<LIGHT_CBUS KEY="06" ACTIVE="Y" NAME="Pond Pump" DISPLAY_NAME="POND_PUMP" />
+			<LIGHT_CBUS KEY="0E" ACTIVE="Y" NAME="Pool and Spa Heater" DISPLAY_NAME="POOL_SPA_HEATER" />
+			<LIGHT_CBUS KEY="0A" ACTIVE="Y" NAME="Pool Cleaner Pump" DISPLAY_NAME="POOL_CLEANER_PUMP" />
+			<LIGHT_CBUS KEY="03" ACTIVE="Y" NAME="Pool Lights" DISPLAY_NAME="POOL_LIGHT" />
+			<LIGHT_CBUS KEY="3D" ACTIVE="Y" NAME="Return Relay" DISPLAY_NAME="POOL_RETURN_RELAY" />
+			<LIGHT_CBUS KEY="0D" ACTIVE="Y" NAME="SPA Blower" DISPLAY_NAME="SPA_BLOWER" />
+			<LIGHT_CBUS KEY="07" ACTIVE="Y" NAME="SPA Jet Pump" DISPLAY_NAME="SPA_JET_PUMP" />
+			<LIGHT_CBUS KEY="04" ACTIVE="Y" NAME="SPA Lights" DISPLAY_NAME="SPA_LIGHT" />
+			<LIGHT_CBUS KEY="08" ACTIVE="Y" NAME="SPA Overflow Pump" DISPLAY_NAME="SPA_OVERFLOW_PUMP" />
+			<LIGHT_CBUS KEY="1D" ACTIVE="Y" NAME="Suction Relay" DISPLAY_NAME="POOL_SUCTION_RELAY" />
+			<LIGHT_CBUS KEY="09" ACTIVE="Y" NAME="Main Filter Pump" DISPLAY_NAME="POOL_FILTER_PUMP" />
+			<!-- Downstairs -->
+			<LIGHT_CBUS KEY="43" RELAY="Y" ACTIVE="Y" NAME="Bed 2 Light" DISPLAY_NAME="OFFICE_LIGHT" />
+			<LIGHT_CBUS KEY="01" ACTIVE="Y" NAME="Dining Light" DISPLAY_NAME="DINING_LIGHT" />
+			<LIGHT_CBUS KEY="28" ACTIVE="Y" NAME="Bath 1 Light" DISPLAY_NAME="BATH1_LIGHT" />
+			<LIGHT_CBUS KEY="29" ACTIVE="Y" NAME="Bath 1 Fan" DISPLAY_NAME="BATH1_FAN" />
+			<LIGHT_CBUS KEY="2C" ACTIVE="Y" NAME="Bath 1 LV Light" DISPLAY_NAME="BATH1_LV_LIGHT" />
+			<LIGHT_CBUS KEY="2A" ACTIVE="Y" NAME="Bath 1 1st Heat" DISPLAY_NAME="BATH1_1_HEAT" />
+			<LIGHT_CBUS KEY="2B" ACTIVE="Y" NAME="Bath 1 2nd Heat" DISPLAY_NAME="BATH1_2_HEAT" />
+			<LIGHT_CBUS KEY="40" ACTIVE="Y" NAME="Hall Light" DISPLAY_NAME="HALL_LIGHT" />
+			<LIGHT_CBUS KEY="30" ACTIVE="Y" RELAY="Y" NAME="Ensuite Light" DISPLAY_NAME="ENSUITE_LIGHT" />
+			<LIGHT_CBUS KEY="2D" ACTIVE="Y" RELAY="Y" NAME="Ensuite Fan" DISPLAY_NAME="ENSUITE_FAN" />
+			<LIGHT_CBUS KEY="2E" ACTIVE="Y" RELAY="Y" NAME="Ensuite 1st Heat" DISPLAY_NAME="ENSUITE_1_HEAT" />
+			<LIGHT_CBUS KEY="2F" ACTIVE="Y" RELAY="Y" NAME="Ensuite 2nd Heat" DISPLAY_NAME="ENSUITE_2_HEAT" />
+			<LIGHT_CBUS KEY="31" ACTIVE="Y" RELAY="Y" NAME="Ensuite LV Light" DISPLAY_NAME="ENSUITE_LV_LIGHT" />
+			<LIGHT_CBUS KEY="3E" ACTIVE="Y" NAME="Entry Light" DISPLAY_NAME="ENTRY_LIGHT" />
+			<LIGHT_CBUS KEY="41" ACTIVE="Y" NAME="Family Light" DISPLAY_NAME="FAMILY_LIGHT" />
+			<LIGHT_CBUS KEY="1B" ACTIVE="Y" NAME="Family Fluro Light" DISPLAY_NAME="FAMILY_FLURO_LIGHT" />
+			<LIGHT_CBUS KEY="0F" ACTIVE="Y" NAME="Garage Entry Light" DISPLAY_NAME="GARAGE_ENTRY_LIGHT" />
+			<LIGHT_CBUS KEY="11" ACTIVE="Y" NAME="Garage Light" DISPLAY_NAME="GARAGE_LIGHT" />
+			<LIGHT_CBUS KEY="42" ACTIVE="Y" NAME="Kitchen Bench Light" DISPLAY_NAME="KITCHEN_BENCH_LIGHT" />
+			<LIGHT_CBUS KEY="32" ACTIVE="Y" NAME="Kitchen Fluro Light" DISPLAY_NAME="KITCHEN_FLURO_LIGHT" />
+			<LIGHT_CBUS KEY="17" ACTIVE="Y" NAME="Laundry Light" DISPLAY_NAME="LAUNDRY_LIGHT" />
+			<LIGHT_CBUS KEY="02" ACTIVE="Y" NAME="Lounge Light" DISPLAY_NAME="LOUNGE_LIGHT" />
+			<LIGHT_CBUS KEY="3C" ACTIVE="Y" NAME="Lounge LV Light" DISPLAY_NAME="LOUNGE_LV_LIGHT" />
+			<LIGHT_CBUS KEY="34" ACTIVE="Y" NAME="Masterbed Light" DISPLAY_NAME="MASTERBED_LIGHT" />
+			<LIGHT_CBUS KEY="35" ACTIVE="Y" NAME="Masterbed Wall Light 1" DISPLAY_NAME="MASTERBED_WALL_1_LIGHT" />
+			<LIGHT_CBUS KEY="36" ACTIVE="Y" NAME="Masterbed Wall Light 2" DISPLAY_NAME="MASTERBED_WALL_2_LIGHT" />
+			<LIGHT_CBUS KEY="26" ACTIVE="Y" NAME="Lower Level Stair Light" DISPLAY_NAME="LOWER_STAIR_LIGHT" />
+			<!-- Upstairs -->
+			<LIGHT_CBUS KEY="38" ACTIVE="Y" NAME="Bed 3 Light" DISPLAY_NAME="BED3_LIGHT" />
+			<LIGHT_CBUS KEY="3A" ACTIVE="Y" NAME="Bed 4 Light" DISPLAY_NAME="BED4_LIGHT" />
+			<LIGHT_CBUS KEY="33" ACTIVE="Y" NAME="Middle Stairs Light" DISPLAY_NAME="MIDDLE_STAIRS_LIGHT" />
+			<LIGHT_CBUS KEY="22" ACTIVE="N" NAME="Roof Space Light" DISPLAY_NAME="ROOF_SPACE_LIGHT" />
+			<LIGHT_CBUS KEY="39" ACTIVE="Y" NAME="Theatre Light" DISPLAY_NAME="THEATRE_LIGHT" />
+			<LIGHT_CBUS KEY="23" ACTIVE="Y" NAME="Theatre Fluro Light 1" DISPLAY_NAME="THEATRE_FLURO_1_LIGHT" />
+			<LIGHT_CBUS KEY="24" ACTIVE="Y" NAME="Theatre Fluro Light 2" DISPLAY_NAME="THEATRE_FLURO_2_LIGHT" />
+			<LIGHT_CBUS KEY="25" ACTIVE="Y" NAME="Theatre Fluro Light 3" DISPLAY_NAME="THEATRE_FLURO_3_LIGHT" />
+			<LIGHT_CBUS KEY="27" ACTIVE="Y" NAME="Study Store" DISPLAY_NAME="STUDY_STORE_LIGHT" />
+			<LIGHT_CBUS KEY="3B" ACTIVE="Y" NAME="Top of Stairs Light" DISPLAY_NAME="TOP_STAIRS_LIGHT" />
+			<LIGHT_CBUS KEY="1C" ACTIVE="Y" NAME="Bath 2 Light" DISPLAY_NAME="BATH2_LIGHT" />
+			<LIGHT_CBUS KEY="1F" ACTIVE="Y" NAME="Bath 2 Fan" DISPLAY_NAME="BATH2_FAN" />
+			<LIGHT_CBUS KEY="21" ACTIVE="Y" NAME="Bath 2 LV Light" DISPLAY_NAME="BATH2_LV_LIGHT" />
+			<LIGHT_CBUS KEY="1E" ACTIVE="Y" NAME="Bath 2 1st Heat" DISPLAY_NAME="BATH2_1_HEAT" />
+			<LIGHT_CBUS KEY="20" ACTIVE="Y" NAME="Bath 2 2nd Heat" DISPLAY_NAME="BATH2_2_HEAT" />
+			<!-- DLTs -->
+			<LABEL ACTIVE="Y" KEY="22" NAME="DLT 1"  DISPLAY_NAME="DLT_1" DEFAULT_LABEL_KEY="DLT_LABEL_1" />
+			<LABEL ACTIVE="Y" KEY="51" NAME="DLT 2"  DISPLAY_NAME="DLT_2" DEFAULT_LABEL_KEY="DLT_LABEL_2" />
+			<LABEL ACTIVE="Y" KEY="52" NAME="DLT 3"  DISPLAY_NAME="DLT_3" DEFAULT_LABEL_KEY="DLT_LABEL_3" />
+			<LABEL ACTIVE="Y" KEY="53" NAME="DLT 4"  DISPLAY_NAME="DLT_4" DEFAULT_LABEL_KEY="DLT_LABEL_4" />
+			<LABEL ACTIVE="Y" KEY="54" NAME="DLT 5"  DISPLAY_NAME="DLT_5" DEFAULT_LABEL_KEY="DLT_LABEL_5" />
+			<LABEL ACTIVE="Y" KEY="55" NAME="DLT 6"  DISPLAY_NAME="DLT_6" DEFAULT_LABEL_KEY="DLT_LABEL_6" />
+			<LABEL ACTIVE="Y" KEY="56" NAME="DLT 7"  DISPLAY_NAME="DLT_7" DEFAULT_LABEL_KEY="DLT_LABEL_7" />
+			<LABEL ACTIVE="Y" KEY="57" NAME="DLT 8"  DISPLAY_NAME="DLT_8" DEFAULT_LABEL_KEY="DLT_LABEL_8" />
+               </CBUS>
+        </DEVICE>
+	<DEVICE ACTIVE="Y" NAME="M1" DISPLAY_NAME="M1" PASSWORD="1234">
+        <CONNECTION>
+                <IP ACTIVE="Y" IP_ADDRESS="192.168.0.251" PORT="2101"/>
+        </CONNECTION>
+	<PARAMETERS>
+                <ITEM NAME="POLL_SENSOR_INTERVAL" VALUE="10"/>
+        </PARAMETERS>
+        <M1>
+		<!-- Temperature Sensors -->
+		<SENSOR ACTIVE="Y" KEY="14" GROUP="0" NAME="AV Cupboard Temp" DISPLAY_NAME="AV_TEMP" UNITS="C"/> 
+		<SENSOR ACTIVE="Y" KEY="01" GROUP="1" NAME="Entry Temp" DISPLAY_NAME="ENTRY_TEMP" UNITS="C"/>
+		<SENSOR ACTIVE="Y" KEY="02" GROUP="1" NAME="Laundry Temp" DISPLAY_NAME="LAUNDRY_TEMP" UNITS="C"/>
+		<SENSOR ACTIVE="Y" KEY="03" GROUP="1" NAME="Garage Internal Temp" DISPLAY_NAME="GARAGE_INTERNAL_TEMP" UNITS="C"/>
+		<SENSOR ACTIVE="Y" KEY="04" GROUP="1" NAME="Garage External Temp" DISPLAY_NAME="GARAGE_EXTERNAL_TEMP" UNITS="C"/>
+		<!-- Outputs -->
+        	<TOGGLE_OUTPUT ACTIVE="Y" KEY="017" AREA="01" NAME="Garage Door Opener" DISPLAY_NAME="GARAGE_DOOR_OPENER" />
+		<TOGGLE_OUTPUT ACTIVE="Y" KEY="018" AREA="01" NAME="Front Gate Strike" DISPLAY_NAME="FRONT_GATE" />
+                <TOGGLE_OUTPUT ACTIVE="Y" KEY="024" AREA="01" NAME="Sprinkler Side Garden" DISPLAY_NAME="SPRINKLER_SIDE_GARDEN" />
+		<TOGGLE_OUTPUT ACTIVE="Y" KEY="019" AREA="01" NAME="Hedge Sprinkler" DISPLAY_NAME="SPRINKLER_HEDGE_GARDEN" />
+                <TOGGLE_OUTPUT ACTIVE="Y" KEY="020" AREA="01" NAME="Sprinkler Back Grass" DISPLAY_NAME="SPRINKLER_BACK_GRASS" />
+                <TOGGLE_OUTPUT ACTIVE="Y" KEY="022" AREA="01" NAME="Sprinkler Back Garden" DISPLAY_NAME="SPRINKLER_BACK_GARDEN" />
+                <TOGGLE_OUTPUT ACTIVE="Y" KEY="023" AREA="01" NAME="Sprinkler Front Garden" DISPLAY_NAME="SPRINKLER_FRONT_GARDEN" />
+                <TOGGLE_OUTPUT ACTIVE="Y" KEY="021" AREA="01" NAME="Sprinkler Front Lawn" DISPLAY_NAME="SPRINKLER_FRONT_GRASS" />
+			
+		<!-- PIRs - (IP) -->
+		<CONTACT_CLOSURE ACTIVE="N" KEY="01" AREA="01" NAME="Entry PIR" DISPLAY_NAME="ENTRY_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="006" AREA="01" NAME="Dining Room PIR" DISPLAY_NAME="DINING_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="007" AREA="01" NAME="Lounge Room PIR" DISPLAY_NAME="LOUNGE_PIR"/>
+                <CONTACT_CLOSURE ACTIVE="Y" KEY="002" AREA="01" NAME="Family Room PIR"  DISPLAY_NAME="FAMILY_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="001" AREA="01" NAME="Downstairs Hall PIR"  DISPLAY_NAME="HALL_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="008" AREA="01" NAME="Laundry Door Reed"  DISPLAY_NAME="LAUNDRY_DOOR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="003" AREA="01" NAME="Master Bedroom PIR"  DISPLAY_NAME="MASTERBED_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="018" AREA="01" NAME="Downstairs Smoke Detector"  DISPLAY_NAME="DOWNSTAIRS_SMOKE"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="005" AREA="01" NAME="Office PIR"  DISPLAY_NAME="STUDY_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="023" AREA="01" NAME="Downstairs Hall PIR"  DISPLAY_NAME="HALL_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="022" AREA="01" NAME="Garage PIR"  DISPLAY_NAME="GARAGE_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="004" AREA="01" NAME="Landing PIR"  DISPLAY_NAME="LANDING_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="021" AREA="01" NAME="Theatre PIR"  DISPLAY_NAME="THEATRE_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="017" AREA="01" NAME="Upstairs Smoke Detector"  DISPLAY_NAME="UPSTAIRS_SMOKE"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="019" AREA="01" NAME="Tessa's Room PIR"  DISPLAY_NAME="BED3_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="020" AREA="01" NAME="Ainslee's Room PIR"  DISPLAY_NAME="BED4_PIR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="034" AREA="01" NAME="Front Gate Reed"  DISPLAY_NAME="FRONT_GATE_REED"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="033" AREA="01" NAME="Garage Door Reed"  DISPLAY_NAME="GARAGE_DOOR"/>
+		<CONTACT_CLOSURE ACTIVE="Y" KEY="048" AREA="01" NAME="Door Bell"  DISPLAY_NAME="DOOR_BELL"/>
+	</M1>
+</DEVICE>
+</CONFIG>
+
