@@ -38,7 +38,7 @@ public class Security {
 	connected = true;
 	return ;
     
-    */
+    /*/
      
 	InputStreamReader reader = new InputStreamReader(System.in);
 	BufferedReader in = new BufferedReader(reader);
